fixed offer not showing by default

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -256,3 +256,13 @@ border-radius: 50%;
 	background-color:green;
 	color:#f2f2f2;
 }
+
+.maximosMarinos li{
+	display: inline-block;
+  	font-size: 20px;
+ 	padding: 20px;
+	
+}
+.maximosMarinos{
+	height: 100%
+}
